--- a/loancalculator/index.html
+++ b/loancalculator/index.html
@@ -12,7 +12,7 @@
     <title>Loan Calculator</title>
   </head>
   <body class="bg-dark">
-    
+
     <div class="container">
       <div class="row">
         <div class="col-md-6 mx-auto">
@@ -24,18 +24,33 @@
               <div class="form-group">
                 <div class="input-group">
                   <span class="input-group-addon">$</span>
-                  <input type="number" class="form-control" id="amount" placeholder="Loan Amount">
+                  <input 
+                    type="number" 
+                    class="form-control" 
+                    id="amount" 
+                    placeholder="Loan Amount"
+                  >
                 </div>
               </div>
               <div class="form-group">
                 <div class="input-group">
                   <span class="input-group-addon">%</span>
-                  <input type="number" class="form-control" id="interest" placeholder="Interest">
+                  <input 
+                    type="number" 
+                    class="form-control" 
+                    id="interest" 
+                    placeholder="Interest"
+                  >
                 </div>
               </div>
 
               <div class="form-group">
-                <input type="number" class="form-control" id="years" placeholder="Years To Repay">
+                <input 
+                  type="number" 
+                  class="form-control" 
+                  id="years" 
+                  placeholder="Years To Repay"
+                >
               </div>
               <div class="form-group">
                 <input type="submit" value="Calculate" class="btn btn-dark btn-block">
