--- a/loancalculator/index.html
+++ b/loancalculator/index.html
@@ -8,7 +8,11 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
+    <style>
+      #loading, #results {
+        display: none;
+      }
+    </style>
     <title>Loan Calculator</title>
   </head>
   <body class="bg-dark">
@@ -58,11 +62,9 @@
             </form>
 
             <!-- LOADER -->
-            <!--
             <div id="loading">
               <img src="img/loading.gif" alt="">
             </div>
-            -->
             
             <!-- RESULTS -->
             <div id="results" class="pt-4">
