number guesser added

--- a/loancalculator/index.html
+++ b/loancalculator/index.html
@@ -63,7 +63,7 @@
 
             <!-- LOADER -->
             <div id="loading">
-              <img src="img/loading.gif" alt="">
+              <img src="img/loading.gif" alt="" style="width: 100px" />
             </div>
             
             <!-- RESULTS -->
