--- a/numberguesser/index.html
+++ b/numberguesser/index.html
@@ -13,10 +13,12 @@
     <h1>Number Guesser</h1>
     <div id="game">
       <p>Guess a number between 
-        <span class="min-num">1</span> 
+        <span class="min-num"><b>1</b></span> 
         and 
         <span class="max-num">10</span>
       </p>
+      <p class="guess-number"></p>
+
       <input id="guess-input" type="number" placeholder="Enter your guess...">
       <input id="guess-btn" type="submit" value="Submit" >
       <p class="message"></p>
