--- a/Weather-JS/weatherjs/index.html
+++ b/Weather-JS/weatherjs/index.html
@@ -6,6 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://bootswatch.com/4/cerulean/bootstrap.min.css">
   <title>WeatherJS</title>
+  <style>
+    body {
+      background-color: #333;
+    }
+  </style>
 </head>
 <body>
   <div class="container">
