--- a/Tasklist/index.html
+++ b/Tasklist/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <!-- Font Awesome -->
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
   <title>Task List</title>
 </head>
 <body>
@@ -17,7 +18,7 @@
         <div id="main" class="card">
           
           <div class="card-content">
-            <span class="card-title">Task List</span>
+            <span class="card-title"><strong>JavaScript Task List</strong></span>
             <div class="row">
               <form id="task-form">
                 <div class="input-field col s12">
