--- a/Dev_Finance/index.html
+++ b/Dev_Finance/index.html
@@ -5,48 +5,70 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <title>$Dev Finance</title>
+  <title>Capela.Finance$</title>
 </head>
 <body>
   <header>
-    <h1>Dev_Finance$</h1>
+    <h1 id="logo">Capela.Finance$</h1>
   </header>
-  <main>
-    <h2>Balanço</h2>
-    <h3>Entradas</h3>
-    <p>R$ 5.000,00</p>
-    <h2>Transações</h2>
-    <table>
-      <thead>
-        <tr>
-          <th>Descrição</th>
-          <th>Valor</th>
-          <th>Data</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Luz</td>
-          <td>- R$500,00</td>
-          <td>23/01/2021</td>
-        </tr>
-        <tr>
-          <td>Criação Website</td>
-          <td>- R$5000,00</td>
-          <td>01/02/2021</td>
-        </tr>
-        <tr>
-          <td>Internet</td>
-          <td>- R$200,00</td>
-          <td>05/01/2021</td>
-        </tr>
-      </tbody>
-    </table>
-  </main>
-  <footer>
-    <p></p>
+  <main class="container">
+    <section id="balance">
+      <h2>Balanço</h2>
 
+      <div class="card">
+        <h3>Entradas</h3>
+        <p>R$ 5.000,00</p>
+      </div>
+
+      <div class="card">
+        <h3>Saídas</h3>
+        <p>R$ 2.000,00</p>
+      </div>
+
+      <div class="card total">
+        <h3>Total</h3>
+        <p>R$ 3.000,00</p>
+      </div>
+      
+    </section>
+
+    <section id="transaction">
+      <h2>Transações</h2>
+      
+      <table id="data-table">
+        <thead>
+          <tr>
+            <th>Descrição</th>
+            <th>Valor</th>
+            <th>Data</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="description">Luz</td>
+            <td class="expense">- R$500,00</td>
+            <td class="date">23/01/2021</td>
+          </tr>
+          <tr>
+            <td class="description">Criação Website</td>
+            <td class="income">R$5000,00</td>
+            <td class="date">01/02/2021</td>
+          </tr>
+          <tr>
+            <td class="description">Internet</td>
+            <td class="expense">- R$200,00</td>
+            <td class="date">05/01/2021</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+
+  </main>
+
+  <footer>
+    <p>Capela.finance$</p>
   </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
