--- a/Dev_Finance/index.html
+++ b/Dev_Finance/index.html
@@ -1,74 +1,136 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <title>Capela.Finance$</title>
-</head>
-<body>
-  <header>
-    <h1 id="logo">Capela.Finance$</h1>
-  </header>
-  <main class="container">
-    <section id="balance">
-      <h2>Balanço</h2>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <title>dev.Finance$</title>
+  </head>
+  <body>
+    <header>
+      <img src="./assets/logo.svg" alt="Logo Capela Finance" />
+    </header>
+    <main class="container">
+      <section id="balance">
+        <h2 class="sr-only">Balanço</h2>
 
-      <div class="card">
-        <h3>Entradas</h3>
-        <p>R$ 5.000,00</p>
+        <div class="card">
+          <h3>
+            <span>Entradas</span>
+            <img src="./assets/income.svg" alt="Imagem de entradas" />
+          </h3>
+          <p>R$ 5.000,00</p>
+        </div>
+
+        <div class="card">
+          <h3>
+            <span>Saída</span>
+            <img src="./assets/expense.svg" alt="Imagem de saídas" />
+          </h3>
+          <p>R$ 2.000,00</p>
+        </div>
+
+        <div class="card total">
+          <h3>
+            <span>Total</span>
+            <img src="./assets/total.svg" alt="Imagem de total" />
+          </h3>
+          <p>R$ 3.000,00</p>
+        </div>
+      </section>
+
+      <section id="transaction">
+        <h2 class="sr-only">Transações</h2>
+        <a href="#" class="button new" onclick="Modal.open()">+ Nova Transação</a>
+        <table id="data-table">
+          <thead>
+            <tr>
+              <th>Descrição</th>
+              <th>Valor</th>
+              <th>Data</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="description">Luz</td>
+              <td class="expense">- R$500,00</td>
+              <td class="date">23/01/2021</td>
+              <td>
+                <img src="./assets/minus.svg" alt="Remover transação" />
+              </td>
+            </tr>
+            <tr>
+              <td class="description">Criação Website</td>
+              <td class="income">R$5000,00</td>
+              <td class="date">01/02/2021</td>
+              <td>
+                <img src="./assets/minus.svg" alt="Remover transação" />
+              </td>
+            </tr>
+            <tr>
+              <td class="description">Internet</td>
+              <td class="expense">- R$200,00</td>
+              <td class="date">05/01/2021</td>
+              <td>
+                <img src="./assets/minus.svg" alt="Remover transação" />
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+    </main>
+
+    <div class="modal-overlay">
+      <div class="modal">
+        <div id="form">
+          <h2>Nova Transação</h2>
+          <form action="">
+            <div class="input-group">
+              <label class="sr-only" for="description">Descrição</label>
+              <input
+                type="text"
+                id="description"
+                name="description"
+                placeholder="Descrição"
+              />
+            </div>
+
+            <div class="input-group">
+              <label class="sr-only" for="amount">Valor</label>
+              <input
+                type="number"
+                step="0.01"
+                id="amount"
+                name="amount"
+                placeholder="0,00"
+              />
+              <small class="help"
+                >Use o sinal - (negativo) para desepesas e (vírgula) para casas
+                decimais</small
+              >
+            </div>
+
+            <div class="input-group">
+              <label class="sr-only" for="date">Data</label>
+              <input type="date" id="date" name="date" />
+            </div>
+
+            <div class="input-group actions">
+              <a href="#" class="button cancel" onclick="Modal.close()">Cancelar</a>
+              <button>Salvar</button>
+            </div>
+          </form>
+        </div>
       </div>
+    </div>
 
-      <div class="card">
-        <h3>Saídas</h3>
-        <p>R$ 2.000,00</p>
-      </div>
+    <footer>
+      <p>dev.finance$</p>
+    </footer>
 
-      <div class="card total">
-        <h3>Total</h3>
-        <p>R$ 3.000,00</p>
-      </div>
-      
-    </section>
-
-    <section id="transaction">
-      <h2>Transações</h2>
-      
-      <table id="data-table">
-        <thead>
-          <tr>
-            <th>Descrição</th>
-            <th>Valor</th>
-            <th>Data</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td class="description">Luz</td>
-            <td class="expense">- R$500,00</td>
-            <td class="date">23/01/2021</td>
-          </tr>
-          <tr>
-            <td class="description">Criação Website</td>
-            <td class="income">R$5000,00</td>
-            <td class="date">01/02/2021</td>
-          </tr>
-          <tr>
-            <td class="description">Internet</td>
-            <td class="expense">- R$200,00</td>
-            <td class="date">05/01/2021</td>
-          </tr>
-        </tbody>
-      </table>
-    </section>
-
-  </main>
-
-  <footer>
-    <p>Capela.finance$</p>
-  </footer>
-
-  <script src="script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
