--- a/Hangman/index.html
+++ b/Hangman/index.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
-  <link rel="stylesheet" type="text/css" href="css/style2.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>Hangman</title>
 </head>
 <body>
   
+  <div>Type to guess</div>
   <h1 class="puzzle-title">The Hangman Game</h1>
   <div class="container">
     
