--- a/Dev_Finance/index.html
+++ b/Dev_Finance/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <title>dev.Finance$</title>
+    <title>dev.finance$</title>
   </head>
   <body>
     <header>
@@ -21,7 +21,7 @@
             <span>Entradas</span>
             <img src="./assets/income.svg" alt="Imagem de entradas" />
           </h3>
-          <p>R$ 5.000,00</p>
+          <p id="incomeBalance" class="income"></p>
         </div>
 
         <div class="card">
@@ -29,7 +29,7 @@
             <span>Saída</span>
             <img src="./assets/expense.svg" alt="Imagem de saídas" />
           </h3>
-          <p>R$ 2.000,00</p>
+          <p id="expenseBalance" class="expense"></p>
         </div>
 
         <div class="card total">
@@ -37,13 +37,15 @@
             <span>Total</span>
             <img src="./assets/total.svg" alt="Imagem de total" />
           </h3>
-          <p>R$ 3.000,00</p>
+          <p id="totalBalance"></p>
         </div>
       </section>
 
       <section id="transaction">
         <h2 class="sr-only">Transações</h2>
-        <a href="#" class="button new" onclick="Modal.open()">+ Nova Transação</a>
+        <a href="#" class="button new" onclick="Modal.toggle()">
+          + Nova Transação
+        </a>
         <table id="data-table">
           <thead>
             <tr>
@@ -54,30 +56,6 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td class="description">Luz</td>
-              <td class="expense">- R$500,00</td>
-              <td class="date">23/01/2021</td>
-              <td>
-                <img src="./assets/minus.svg" alt="Remover transação" />
-              </td>
-            </tr>
-            <tr>
-              <td class="description">Criação Website</td>
-              <td class="income">R$5000,00</td>
-              <td class="date">01/02/2021</td>
-              <td>
-                <img src="./assets/minus.svg" alt="Remover transação" />
-              </td>
-            </tr>
-            <tr>
-              <td class="description">Internet</td>
-              <td class="expense">- R$200,00</td>
-              <td class="date">05/01/2021</td>
-              <td>
-                <img src="./assets/minus.svg" alt="Remover transação" />
-              </td>
-            </tr>
           </tbody>
         </table>
       </section>
@@ -87,7 +65,7 @@
       <div class="modal">
         <div id="form">
           <h2>Nova Transação</h2>
-          <form action="">
+          <form action="" onsubmit="Form.submit(event)">
             <div class="input-group">
               <label class="sr-only" for="description">Descrição</label>
               <input
@@ -107,9 +85,9 @@
                 name="amount"
                 placeholder="0,00"
               />
-              <small class="help"
-                >Use o sinal - (negativo) para desepesas e (vírgula) para casas
-                decimais</small
+              <small class="help">
+                Use o sinal - (negativo) para desepesas e (vírgula) para casasdecimais
+              </small
               >
             </div>
 
@@ -119,8 +97,10 @@
             </div>
 
             <div class="input-group actions">
-              <a href="#" class="button cancel" onclick="Modal.close()">Cancelar</a>
-              <button>Salvar</button>
+              <a href="#" class="button cancel" onclick="Modal.toggle()"
+                >Cancelar</a
+              >
+              <button type="submit">Salvar</button>
             </div>
           </form>
         </div>
@@ -131,6 +111,6 @@
       <p>dev.finance$</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
