--- a/Micropost/index.html
+++ b/Micropost/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 
 <head>
+  <link rel="stylesheet" href="https://bootswatch.com/5/cosmo/bootstrap.min.css">
+  <script src="https://kit.fontawesome.com/80a77d1ec5.js" crossorigin="anonymous"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://bootswatch.com/5/cosmo/bootstrap.min.css">
-  <link rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css"
-    integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/css/styles.css">
   <title>Microposts</title>
 </head>
 
@@ -44,12 +43,12 @@
         ></textarea>
       </div>
 
-      <input type="hidden" id="id" value="">
+      <input type="hidden" id="hidden" value="">
       <button class="post-submit btn btn-primary btn-block">Post it</button>
       <span class="form-end"></span>
     </div>
     <br>
-    <div id="posts"></div>
+    <div id="postsArea"></div>
   </div>
 
   <footer class="mt-5 p-3 text-center bg-light">
