feat: add + delete Posts

--- a/Micropost/index.html
+++ b/Micropost/index.html
@@ -14,7 +14,7 @@
 <body>
   <nav class="navbar navbar-dark bg-primary mb-3">
     <div class="container">
-      <a href="" class="navbar-brand">MicroPosts</a>
+      <a href="" class="navbar-brand logo">MicroPosts</a>
     </div>
   </nav>
 
