--- a/Micropost/index.html
+++ b/Micropost/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
   <title>Microposts</title>
 </head>
 
@@ -46,7 +47,7 @@
       <input type="hidden" id="hidden" value="">
       <button class="post-submit btn btn-primary btn-block">Post it</button>
       <span class="form-end"></span>
-      
+
     </div>
     <br>
     <div id="postsArea"></div>
