Notes_app: config webpack

--- a/Notes_app/public/edit.html
+++ b/Notes_app/public/edit.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
   <title>Note Edit page</title>
 </head>
+
 <body>
   <header>
     <div class="container">
@@ -19,7 +21,7 @@
 
     <div class="actions">
       <div class="actions__container actions__container--spaced">
-        <a href="./index.html">Home</a>
+        <a href="/">Home</a>
         <span id="last-edited"></span>
       </div>
     </div>
@@ -31,8 +33,7 @@
     </div>
 
   </main>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment-with-locales.min.js" integrity="sha512-LGXaggshOkD/at6PFNcp2V2unf9LzFq6LE+sChH7ceMTDP0g2kn6Vxwgg7wkPP7AAtX+lmPqPdxB47A0Nz0cMQ==" crossorigin="anonymous"></script>
-  <script src="scripts/notes-functions.js"></script>
-  <script src="scripts/notes-edit.js"></script>
+  <script src="scripts/edit-bundle.js"></script>
 </body>
+
 </html>
