--- a/Notes_app/public/index.html
+++ b/Notes_app/public/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
   <title>Notes App</title>
 </head>
+
 <body>
   <header>
     <div class="container">
@@ -32,9 +34,7 @@
     <button class="button" id="create-note">Create Note</button>
   </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuidv4.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment-with-locales.min.js" integrity="sha512-LGXaggshOkD/at6PFNcp2V2unf9LzFq6LE+sChH7ceMTDP0g2kn6Vxwgg7wkPP7AAtX+lmPqPdxB47A0Nz0cMQ==" crossorigin="anonymous"></script>
-  <script src="scripts/notes-functions.js"></script>
-  <script src="scripts/notes-app.js"></script>
+  <script src="scripts/index-bundle.js"></script>
 </body>
+
 </html>
