Refactor: project with webpack

--- a/Todos_app/public/index.html
+++ b/Todos_app/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>To-do App</title>
 </head>
+
 <body>
   <header>
     <div class="container">
@@ -33,8 +35,7 @@
     </form>
   </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuidv4.min.js"></script>
-  <script src="scripts/todo-functions.js"></script>
-  <script src="scripts/todo-app.js"></script>
+  <script src="scripts/bundle.js"></script>
 </body>
+
 </html>
